--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1116,152 +1116,7 @@ header.sticky nav > div > ul > li span {font-size: 11px;}
 h2.marginb-0,
 h3.marginb-0 {margin-bottom: 0;}
 /*===== Popular Dishes Section =====*/
-.popular-dish-box {
-  float: left;
-  width: 100%;
-  margin-bottom: 50px;
-}
-.popular-dish-thumb {
-  float: left;
-  width: 100%;
-  position: relative;
-}
-.popular-dish-thumb > a {
-  float: left;
-  width: 100%;
-  position: relative;
-  overflow: hidden;
-}
-.popular-dish-thumb > a:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0;
-  background-color: #000;
-  z-index: 1;
-}
-.popular-dish-box:hover .popular-dish-thumb > a::before {opacity: .2;}
-.popular-dish-box:hover .popular-dish-thumb > a img {
-  -webkit-transform: rotate(3deg) scale(1.08);
-  -ms-transform: rotate(3deg) scale(1.08);
-  -o-transform: rotate(3deg) scale(1.08);
-  transform: rotate(3deg) scale(1.08);
-}
-.post-rate {
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  font-size: 11px;
-  color: #fff;
-  font-family: Poppins;
-  font-weight: 700;
-  padding: 6px 10px;
-  z-index: 1;
-}
 
-.popular-dish-thumb span.likes {
-    background: #191919 none repeat scroll 0 0;
-    border-radius: 4px;
-    bottom: 20px;
-    color: #fff;
-    font-family: lato;
-    font-size: 12px;
-    font-weight: bold;
-    padding: 8px 10px;
-    position: absolute;
-    right: 20px;
-}
-
-.post-rate > i {
-  font-size: 12px;
-}
-.post-likes {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  background-color: #191919;
-  color: #fff;
-  font-size: 12px;
-	font-weight: bold;
-	font-family: lato;
-  padding: 8px 9px;
-  z-index: 1;
-}
-.popular-dish-info {
-    background: #f9f9f9 none repeat scroll 0 0;
-    float: left;
-    padding: 30px 33px;
-    width: 100%;
-}
-.popular-dish-info > h4 {
-  font-size: 18px;
-  font-weight: 700;
-  margin-bottom: 12px;
-	margin-top: 0;
-}
-.popular-dish-info > p {
-	margin-bottom: 34px;
-	color: #636363;
-	line-height: 24px;
-	font-family: lato;
-	display: inline-block;
-	width: 100%;
-}
-.price {
-  float: left;
-  font-size: 22px;
-  font-family: Poppins;
-  color: #1e1e1e;
-	font-weight: bold;
-}
-.popular-dish-info .price {line-height: 37px;}
-.popular-dish-info > a {
-    background-color: #272727;
-    border: 1px solid transparent;
-    color: #fff;
-    float: right;
-    font-size: 12px;
-    font-weight: bold;
-    padding: 8px 20px;
-    text-transform: uppercase;
-}
-.rest-img-top{
-  width: 100%;
-    height: 40vh;
-    object-fit: cover;
-}
-.restaurant-info {
-    border-top: 1px solid #e2e2e2;
-    float: left;
-    margin-top: 33px;
-    padding-top: 17px;
-    width: 100%;
-    display:flex;
-}
-.restaurant-info > img {
-    display: inline-block;
-    margin-right: 0;
-    vertical-align: middle;
-}
-.restaurant-info-inner {
-    display: inline-block;
-    vertical-align: middle;
-}
-.restaurant-info-inner > h6 {
-    color: #636363;
-    font-family: poppins;
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 19px;
-    margin: 3px 0 0;
-}
-.restaurant-info-inner > span {
-  font-family: Poppins;
-  font-size: 12px;
-}
 /*===== Featured Restaurant Section =====*/
 
 .featured-restaurants-wrapper {
@@ -6314,13 +6169,13 @@ a.thanks-close:focus {color: #333;}
 .dishes-caro {
     float: left;
     width: 100%;
-	box-shadow: 0px 5px 32px 0px rgba(0, 0, 0, 0.04);
+	/* box-shadow: 0px 5px 32px 0px rgba(0, 0, 0, 0.04); */
 }
 .dish-item {
-    background: #fff none repeat scroll 0 0;
+    /* background: #fff none repeat scroll 0 0; */
     border-radius: 6px;
     float: left;
-    padding-bottom: 70px;
+    /* padding-bottom: 70px; */
     position: relative;
     width: 100%;
 }
@@ -6416,56 +6271,14 @@ a.thanks-close:focus {color: #333;}
 }
 
 .popular-of-month {
-    background: #fff none repeat scroll 0 0;
+    /* background: #fff none repeat scroll 0 0; */
     border-radius: 5px;
-    box-shadow: 0 5px 32px 0 rgba(0, 0, 0, 0.04);
-    display: inline-block;
+    /* box-shadow: 0 5px 32px 0 rgba(0, 0, 0, 0.04); */
+  
     padding: 37px 63px;
     width: 100%;
 }
-.pop-dish {
-    border-bottom: 1px dashed #ebebeb;
-    display: inline-block;
-    margin-bottom: 18px;
-    padding-bottom: 18.7px;
-    width: 100%;
-}
-.poplr-dish {
-    display: inline-block;
-    vertical-align: middle;
-    width: 57.5%;
-}
-.poplr-dish > img {
-    border-radius: 100%;
-    display: inline-block;
-    vertical-align: middle;
-    width: 88px;
-}
-.dish-meta {
-    display: inline-block;
-    margin-left: 18px;
-    vertical-align: middle;
-    width: 66%;
-}
-.dish-meta > h4 {
-    color: #444;
-    font-size: 15px;
-    font-weight: 600;
-}
-.dish-meta > span {
-    font-size: 15px;
-}
-.pop-dish .item-meta {
-    border: medium none;
-    padding: 0;
-    vertical-align: middle;
-    width: 41.5%;
-}
-.popular-of-month > .pop-dish:last-child {
-    border-bottom: 0 none;
-    margin-bottom: 0;
-    padding-bottom: 0;
-}
+
 /*--- welcome section home2 ---*/
 .welcome-sec {
     float: left;
